# ffmpeg-cpp

./: CMakeLists.txt  README.md
include/avcodec/: Codec.h  CodecIterator.h
src/avcodec/: CMakeLists.txt  Codec.cpp  CodecIterator.cpp
